--- a/excss04.html
+++ b/excss04.html
@@ -37,18 +37,23 @@
                                 width,height CSS 속성값을 무시 (img 엘리먼트는 예외)
             display: inline-block : 인라인 엘리먼트처럼 배치되지만, 크기 지정 가능
             */
+            display: inline-block;
         }
 
         #box1 {
             /* 화면에서 보이지 않고 공간도 차지하지 않음 */
             /* display: none; */
             /* 화면에서 보이지 않지만 공간은 차지함 */
-            /* visibility: hidden; */
+             visibility: hidden; 
+            
         }
 
         #box2 {
             /* background가 적용되는 영역은 경계선을 포함한 안쪽 영역 (margin 제외) */
-            background-color: darkorange;
+            background-color: rgb(17, 161, 142);
+            background-image: url('img/ball.png');
+            background-repeat: no-repeat;
+            background-position: center;
             /* background-image: url('이미지파일'); */
             /* background-repeat : 배경이미지를 반복하여 적용할 것인지 설정 */
             /* 배경이미지의 위치를 좌우위치, 상하위치 2가지 값으로 설정 (생략시 center) */
@@ -57,9 +62,10 @@
             /* background-position: 10px 50px; */
             /* background-position: 50% 50%; */
             /* background-attachment: 배경이미지의 스크롤 방식 - local(내용물스크롤시함께스크롤), scroll(엘리먼트와함께스크롤), fixed(스크롤되지않고고정) */
-
+            background-attachment: scroll;
             /* overflow: 엘리먼트 크기보다 내용물의 양이 많은 경우 어떻게 보여줄 것인지 설정 */
             /* visible (보이기), hidden(감추기), auto(필요한경우스크롤바표시), scroll(항상스크롤바표시) */
+            overflow: auto;
         }
 
         #p1 {
@@ -123,7 +129,7 @@
     <div id="outbox">
         <div id="box1" class="inbox">상자1</div>
         <div id="box2" class="inbox">
-            상자2
+            상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2상자2
         </div>
     </div>
     <p id="p1" class="bbox">border-style:solid 설정</p>
