--- a/excss08.html
+++ b/excss08.html
@@ -6,6 +6,11 @@
     <style>
         /* 기본적으로 상속이 되는 속성들 : font-size, color ... */
         /* 기본적으로 상속이 되지 않는 속성들 : border ... */
+        div {
+            font-size: 10;
+            color: darkgoldenrod;
+            border: 1px solid black;
+        }
 
         /*
         미디어쿼리(media query)
@@ -14,12 +19,23 @@
         */
         /* @media print { 인쇄시에만 적용되는 스타일 } */
         /* 인쇄시에는 p 엘리먼트가 보이지 않도록 설정 */
+        @media print{
+            p {
+                display: none;
+            }
+        }
+        .myp {color: green;}
+        #p1 {color:magenta;}
+        div #p1 {color:darkgray;}
+        p {color: goldenrod !important;}
+        p {color: blue;}
+
     </style>
 </head>
 <body>
     <div>
         div내용
-        <p id="p1" class="myp">
+        <p id="p1" class="myp" style="color:red">
             * 엘리먼트의 스타일 적용 규칙
             1.해당 엘리먼트에 지정된 스타일 속성 값 적용
             2.해당 엘리먼트에 지정된 스타일 속성이 없는 경우, 조상 엘리먼트로부터 상속된 값을 적용
