--- a/excss05.html
+++ b/excss05.html
@@ -22,19 +22,26 @@
             /* absolute : 조상 엘리먼트 중에서 가장 가까운 position 속성이 static이 아닌 엘리먼트를 기준으로 상대적인 위치를 left,top,right,bottom 속성으로 지정 */
             /*            조상 엘리먼트 중에서 position 속성이 static이 아닌 엘리먼트가 없으면 문서(html)이 기준이 된다 */
             /* fixed : 브라우저의 윈도우를 기준으로 left,top,right,bottom 속성으로 위치 지정 */
+            position:absolute;
         }
 
         /* 엘리먼트가 겹쳐져서 배치될 때, z-index가 큰 엘리먼트가 더 위로 올라오게(덮게) 된다*/
         #sbox1 {
             background-color: yellow;
+            left :0px;
+            top: 0px;
         }
 
         #sbox2 {
             background-color: green;
+            left:50px;
+            top:50px;
         }
 
         #sbox3 {
             background-color: blue;
+            left: 100px;
+            top:100px;
         }
     </style>
 </head>
