--- a/exhtml06.html
+++ b/exhtml06.html
@@ -17,6 +17,16 @@
         </select>
         <input type="submit" value="검색">
       </form>
+      <form action="https://search.daum.net/search" target="result">
+    
+        다음 검색 : <input type="text" name="q"/>
+        <select name="w">
+            <option value="blog">블로그</option>
+            <option value="cafe">카페</option>
+            <option value="news">뉴스</option>
+        </select>
+        <input type="submit" value="검색">
+      </form>
      <iframe src="" name="result" width="600" height="200" frameborder="1">
 
      </iframe>
