--- a/exjs03.html
+++ b/exjs03.html
@@ -10,17 +10,42 @@
     <script>
         //함수를 선언하는 방법
         // 1. function 함수명(인자들) { 함수실행시실행될명령문들.... }
+        function add(x,y) {
+            var result = x+y;
+            return result;
+        }
+        console.log(add(3,4));
         // 2. var 함수명 = function(인자들) { 함수실행시실행될명령문들.... }
+        var addFunc = function add(x,y) {
+            var result = x+y;
+            return result;
+        }
+        console.log(addFunc(3,4));
         // 3. var 함수명 = new Function(함수의인자들과함수함수실행시실행될명령문들을문자열인자로전달)
-        // 4. 익명함수를 생성하고 곧바로 실행 가능
-
+        var addF = new Function('x', 'y', ' var result = x+y; return result;');
+        console.log(addF(3,4));
+        // 4. 익명함수를 생성하고 곧바로 실행 가능       
+        console.log((function (x,y) {var result = x+y; return result;})(3,4));
         // 함수 선언시 지정된 파라미터 수보다 적은 인자를 주면서 실행 가능
         // 인자를 주지 않은 파라미터의 값은 undefined
-
+        function printAll(x,y,z){
+            console.log(x+','+y+','+z);
+        }
+        printAll(1,2,3);
         // 함수 선언시 지정된 파라미터 수보다 많은 인자를 주면서 실행 가능
         // arguments : 함수 실행시 인자로 전달된 값들을 저장하고 있는 배열같은객체
         // arguments[인덱스번호] 형태로 인자값을 꺼내쓰거나, 
         // arguments.length 로 전달된 인자의 갯수 파악 가능
+        function addAll(){
+            var sum =0;
+            console.log(arguments.length);
+            for(var i=0;i<arguments.length;i++){
+                sum = sum+ arguments[i];
+            }
+            return sum;
+        }
+        console.log(addAll(1,2));
+        console.log(addAll(1,2,3,4,5,6,7,8,9));
 
         //변수 선언(var) 없이 변수에 값을 저장하면, 해당 변수가 전역변수로 자동 생성
     </script>
